tests/format/misc/errors/typescript/babel-ts/declare-accessor.ts
class Foo {
  declare get foo()
  declare set foo(v)
}
